syntax = "proto3";

package users.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/realotz/whole/api/users/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.users.v1";
option java_outer_classname = "MemberProtoV1";

service MemberService {
  rpc Login (MemberLogin) returns (MemberLoginRes)  {
    option (google.api.http) = {
      post: "/users/member/login",
    };
  }
  rpc List (MemberListOption) returns (MemberList)  {
    option (google.api.http) = {
      get: "/users/member",
    };
  }
  rpc Get (MemberGetOption) returns (Member)  {
    option (google.api.http) = {
      get: "/users/member/{id}",
    };
  }
  rpc Create (MemberCreateOption) returns (Member)  {
    option (google.api.http) = {
      post: "/users/member",
    };
  }
  rpc Update (MemberUpdateOption) returns (Member)  {
    option (google.api.http) = {
      put: "/users/member",
    };
  }
  rpc Delete (MemberDeleteOption) returns (NullReply)  {
    option (google.api.http) = {
      delete: "/users/member/{id}",
    };
  }
}

//用户登录
message MemberLogin{
  string account = 1; // 账户
  string password = 2; // 密码
  string captcha = 3; // 验证码
  string code = 4; // 短信、邮箱 验证码
}

//登录返回
message MemberLoginRes{
  string token = 1;
  string role = 2;
  int64 expiration_time = 3;
  Member member = 4;
}

message MemberListOption {
  string name = 1;//名称昵称筛选
  string tag = 2;// 标签筛选
  string email = 3;//邮箱筛选
  string mobile = 4;//手机筛选
  string sex = 5; // 性别筛选
  string role = 6; // 角色筛选
  string type = 7; // 用户类型筛选
  string create_time = 8;//创建时间筛选
}

message MemberGetOption{
  int64 id=1;
}

message MemberCreateOption {
  string name = 1; // 姓名
  string account = 2; // 账户
  string nick_name = 4; // 昵称
  string role = 5; // 角色
  string email = 6; // 邮箱
  string mobile = 7; // 手机
  string id_card = 8; // 身份证
  string password = 9; // 密码
  string sex = 10; // 性别
  google.protobuf.Timestamp birthday = 11; // 生日
}

message MemberUpdateOption {
  string name = 1; // 姓名
  string account = 2; // 账户
  string nick_name = 4; // 昵称
  string role = 5; // 角色
  string email = 6; // 邮箱
  string mobile = 7; // 手机
  string id_card = 8; // 身份证
  string password = 9; // 密码
  string sex = 10; // 性别
  google.protobuf.Timestamp birthday = 11; // 生日
  int64 id = 12;
}

message MemberDeleteOption {
  int64 id = 1;
}

message MemberList {
  repeated Member list =1;
}

// 用户信息
message Member{
  int64 id = 1;
  string uuid = 2;
  string name = 3; // 姓名
  string account = 4; // 账户
  string nick_name = 5; // 昵称
  string role = 6; // 角色
  string email = 7; // 邮箱
  string mobile = 8; // 手机
  string id_card = 9; // 身份证
  string sex = 11; // 性别
  google.protobuf.Timestamp birthday = 12;
  string last_ip = 13;
  google.protobuf.Timestamp last_time = 14;
  google.protobuf.Timestamp create_time = 15;
  google.protobuf.Timestamp update_time = 16;
}

message NullReply{}
